Backend cleanup: improved services, logging, comments and removed unnecessary debug configuration